docs updated - ribbon color(2)

--- a/docs/index.tex
+++ b/docs/index.tex
@@ -1003,7 +1003,7 @@ Rows as sequence of sequences
 \end{Shaded}
 
 \begin{verbatim}
-([#object[java.time.LocalDate 0x34dd835a "2012-01-01"] 0.0 12.8 5.0 4.7 "drizzle"] [#object[java.time.LocalDate 0x36b5614d "2012-01-02"] 10.9 10.6 2.8 4.5 "rain"])
+([#object[java.time.LocalDate 0x6d0fa21b "2012-01-01"] 0.0 12.8 5.0 4.7 "drizzle"] [#object[java.time.LocalDate 0x24ce4266 "2012-01-02"] 10.9 10.6 2.8 4.5 "rain"])
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -1017,13 +1017,13 @@ Rows as sequence of maps
 \end{Shaded}
 
 \begin{verbatim}
-({"date" #object[java.time.LocalDate 0x5ffaf493 "2012-01-01"],
+({"date" #object[java.time.LocalDate 0x4cb0b376 "2012-01-01"],
   "precipitation" 0.0,
   "temp_min" 5.0,
   "weather" "drizzle",
   "temp_max" 12.8,
   "wind" 4.7}
- {"date" #object[java.time.LocalDate 0x249a0d6a "2012-01-02"],
+ {"date" #object[java.time.LocalDate 0x9ad412b "2012-01-02"],
   "precipitation" 10.9,
   "temp_min" 2.8,
   "weather" "rain",
@@ -2738,7 +2738,7 @@ You can also pass mapping function with optional columns-selector
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@6ef4902f}{\nolinkurl{java.lang.Object@6ef4902f}}\tabularnewline
+\href{mailto:java.lang.Object@2161a500}{\nolinkurl{java.lang.Object@2161a500}}\tabularnewline
 \midrule
 \endhead
 1 & 1 & 0.5000 & A\tabularnewline
@@ -2832,7 +2832,7 @@ Function works on grouped dataset
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@12248b67}{\nolinkurl{java.lang.Object@12248b67}}\tabularnewline
+\href{mailto:java.lang.Object@48f2320d}{\nolinkurl{java.lang.Object@48f2320d}}\tabularnewline
 \midrule
 \endhead
 1 & 1 & 0.5000 & A\tabularnewline
@@ -2848,7 +2848,7 @@ v1 & v2 & {[}1 2 3{]} &
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@12248b67}{\nolinkurl{java.lang.Object@12248b67}}\tabularnewline
+\href{mailto:java.lang.Object@48f2320d}{\nolinkurl{java.lang.Object@48f2320d}}\tabularnewline
 \midrule
 \endhead
 2 & 2 & 1.000 & B\tabularnewline
@@ -2940,15 +2940,15 @@ Replace one column (column is trimmed)
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-0.8650 & 1 & 0.5000 & A\tabularnewline
-0.9018 & 2 & 1.000 & B\tabularnewline
-0.02618 & 3 & 1.500 & C\tabularnewline
-0.9775 & 4 & 0.5000 & A\tabularnewline
-0.7867 & 5 & 1.000 & B\tabularnewline
-0.1411 & 6 & 1.500 & C\tabularnewline
-0.9396 & 7 & 0.5000 & A\tabularnewline
-0.06867 & 8 & 1.000 & B\tabularnewline
-0.3744 & 9 & 1.500 & C\tabularnewline
+0.1100 & 1 & 0.5000 & A\tabularnewline
+0.8447 & 2 & 1.000 & B\tabularnewline
+0.8681 & 3 & 1.500 & C\tabularnewline
+0.3387 & 4 & 0.5000 & A\tabularnewline
+0.05735 & 5 & 1.000 & B\tabularnewline
+0.7820 & 6 & 1.500 & C\tabularnewline
+0.007467 & 7 & 0.5000 & A\tabularnewline
+0.7730 & 8 & 1.000 & B\tabularnewline
+0.7104 & 9 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -3313,15 +3313,15 @@ map.
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 9 & 0.5000 & A\tabularnewline
-2 & 3 & 1.000 & B\tabularnewline
-1 & 2 & 1.500 & C\tabularnewline
-2 & 5 & 0.5000 & A\tabularnewline
-1 & 6 & 1.000 & B\tabularnewline
-2 & 1 & 1.500 & C\tabularnewline
-1 & 8 & 0.5000 & A\tabularnewline
-2 & 7 & 1.000 & B\tabularnewline
-1 & 4 & 1.500 & C\tabularnewline
+1 & 5 & 0.5000 & A\tabularnewline
+2 & 4 & 1.000 & B\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
+2 & 1 & 0.5000 & A\tabularnewline
+1 & 7 & 1.000 & B\tabularnewline
+2 & 9 & 1.500 & C\tabularnewline
+1 & 2 & 0.5000 & A\tabularnewline
+2 & 6 & 1.000 & B\tabularnewline
+1 & 8 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -3671,7 +3671,7 @@ Double array conversion.
 \end{Shaded}
 
 \begin{verbatim}
-#object["[J" 0x14671e11 "[J@14671e11"]
+#object["[J" 0x7908b1fd "[J@7908b1fd"]
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -3687,7 +3687,7 @@ Function also works on grouped dataset
 \end{Shaded}
 
 \begin{verbatim}
-(#object["[J" 0x257bbbe3 "[J@257bbbe3"] #object["[J" 0x69c75c5b "[J@69c75c5b"] #object["[J" 0x27833883 "[J@27833883"])
+(#object["[J" 0x54a11645 "[J@54a11645"] #object["[J" 0x2f2961ef "[J@2f2961ef"] #object["[J" 0x700b1f72 "[J@700b1f72"])
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -3702,8 +3702,8 @@ You can also cast the type to the other one (if casting is possible):
 \end{Shaded}
 
 \begin{verbatim}
-#object["[Ljava.lang.String;" 0x7e38832b "[Ljava.lang.String;@7e38832b"]
-#object["[F" 0x653c8fd6 "[F@653c8fd6"]
+#object["[Ljava.lang.String;" 0x3208a01a "[Ljava.lang.String;@3208a01a"]
+#object["[F" 0x290c2b86 "[F@290c2b86"]
 \end{verbatim}
 
 \subsubsection{Rows}\label{rows}
@@ -3976,7 +3976,7 @@ Random row (single)
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 6 & 1.500 & C\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4018,15 +4018,15 @@ Random \texttt{n} (default: row count) rows with repetition.
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 8 & 1.000 & B\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
 1 & 7 & 0.5000 & A\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4047,11 +4047,11 @@ Five random rows with repetition
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 6 & 1.500 & C\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
 1 & 1 & 0.5000 & A\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4072,11 +4072,11 @@ Five random, non-repeating rows
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 6 & 1.500 & C\tabularnewline
 1 & 9 & 1.500 & C\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
 1 & 1 & 0.5000 & A\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4123,14 +4123,14 @@ Shuffle dataset
 \midrule
 \endhead
 2 & 8 & 1.000 & B\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
-1 & 3 & 1.500 & C\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
 2 & 2 & 1.000 & B\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4311,18 +4311,18 @@ Select 5 random rows from each group
 2 & 4 & 0.5000 & A\tabularnewline
 1 & 1 & 0.5000 & A\tabularnewline
 1 & 1 & 0.5000 & A\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
 2 & 4 & 0.5000 & A\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
 2 & 2 & 1.000 & B\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
 1 & 3 & 1.500 & C\tabularnewline
-1 & 3 & 1.500 & C\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
 1 & 9 & 1.500 & C\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -5109,8 +5109,8 @@ Random
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 3 & 1.500 & C\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -8609,10 +8609,10 @@ data/anscombe.csv {[}44 3{]}:
 :x & :a & :b & :y1 & :y2 & :z1 & :z2\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0 & 0.7832 & 0.6438 & 3 & -2\tabularnewline
-2 & 1 & 1 & 0.07845 & 0.6394 & 3 & -2\tabularnewline
-3 & 0 & 1 & 0.5967 & 0.2981 & 3 & -2\tabularnewline
-4 & 0 & 1 & 0.9685 & 0.3661 & 3 & -2\tabularnewline
+1 & 1 & 0 & 0.3920 & 0.07961 & 3 & -2\tabularnewline
+2 & 1 & 1 & 0.3027 & 0.4799 & 3 & -2\tabularnewline
+3 & 0 & 1 & 0.8467 & 0.4334 & 3 & -2\tabularnewline
+4 & 0 & 1 & 0.3476 & 0.1776 & 3 & -2\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -8630,14 +8630,14 @@ data/anscombe.csv {[}44 3{]}:
 :x & :a & :b & :times & y & z\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0 & 1 & 0.7832 & 3\tabularnewline
-2 & 1 & 1 & 1 & 0.07845 & 3\tabularnewline
-3 & 0 & 1 & 1 & 0.5967 & 3\tabularnewline
-4 & 0 & 1 & 1 & 0.9685 & 3\tabularnewline
-1 & 1 & 0 & 2 & 0.6438 & -2\tabularnewline
-2 & 1 & 1 & 2 & 0.6394 & -2\tabularnewline
-3 & 0 & 1 & 2 & 0.2981 & -2\tabularnewline
-4 & 0 & 1 & 2 & 0.3661 & -2\tabularnewline
+1 & 1 & 0 & 1 & 0.3920 & 3\tabularnewline
+2 & 1 & 1 & 1 & 0.3027 & 3\tabularnewline
+3 & 0 & 1 & 1 & 0.8467 & 3\tabularnewline
+4 & 0 & 1 & 1 & 0.3476 & 3\tabularnewline
+1 & 1 & 0 & 2 & 0.07961 & -2\tabularnewline
+2 & 1 & 1 & 2 & 0.4799 & -2\tabularnewline
+3 & 0 & 1 & 2 & 0.4334 & -2\tabularnewline
+4 & 0 & 1 & 2 & 0.1776 & -2\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -10578,31 +10578,31 @@ null {[}27 4{]}:
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 7 & 0.5000 & A\tabularnewline
 1 & 9 & 1.500 & C\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
 2 & 6 & 1.500 & C\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
-1 & 3 & 1.500 & C\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
 1 & 7 & 0.5000 & A\tabularnewline
 2 & 8 & 1.000 & B\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -10659,15 +10659,15 @@ union {[}9 4{]}:
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 3 & 1.500 & C\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
 1 & 9 & 1.500 & C\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
 2 & 8 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -12799,9 +12799,9 @@ Other filters
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 7 & 0.5000 & A\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -12818,11 +12818,11 @@ Other filters
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 7 & 0.5000 & A\tabularnewline
-1 & 3 & 1.500 & C\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
